--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
         "dev": "next dev --turbopack",
         "generate:cards": "node scripts/generateContentCards.js",
         "generate:pages": "node scripts/generateArticlePages.js",
+        "generate:content": "node scripts/generateMainContentPage.js",
         "prebuild": "npm run generate:cards && npm run generate:pages",
         "build": "next build",
         "start": "next start",
