ready for content

--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
         "generate:cards": "node scripts/generateContentCards.js",
         "generate:pages": "node scripts/generateArticlePages.js",
         "generate:content": "node scripts/generateMainContentPage.js",
-        "prebuild": "npm run generate:cards && npm run generate:pages && npm run generate:content",
+        "generate:section": "node scripts/generateTopicContentPage.js",
+        "prebuild": "npm run generate:cards && npm run generate:pages && npm run generate:content && npm run generate:section",
         "build": "next build",
         "start": "next start",
         "lint": "next lint"
